Attempt to fix viewport on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ canvas {
 }
 
 .info {
-    min-width: 800px;
+    min-width: 375px;
+    max-width: 800px;
     left: 50%;
     position: absolute;
     color: '#850505';
